--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fit with Mo | Your Personal Training & Health Coach</title>
+  <title>Fit with Mo | Your Personal Training & Health Coach!</title>
   <!-- Favicon -->
   <link rel="icon" href="https://placehold.co/32x32/000000/FFFFFF?text=FM" type="image/png">
   <!-- Tailwind CSS CDN -->
