--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- Header/Navigation -->
   <header class="bg-white shadow-sm py-4">
     <div class="container flex justify-between items-center">
-      <a href="#" class="text-3xl font-bold text-green-600 rounded-lg p-2 hover:bg-gray-100 transition-colors">Fit with Mo</a>
+      <a href="#" class="text-3xl font-bold text-green-600 rounded-lg p-2 hover:bg-gray-100 transition-colors">Fit with Mo!</a>
       <nav>
         <ul class="flex space-x-6">
           <li><a href="#about" class="text-gray-700 hover:text-green-600 font-medium transition-colors rounded-md px-3 py-2">About</a></li>
