--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           Schedule Your Free Discovery Call
         </button>
         <p class="text-sm text-gray-600 mt-4">
-          Or connect with me directly: <a href="mailto:your.email@example.com" class="text-green-600 hover:underline">your.email@example.com</a>
+          Or connect with me directly: <a href="mailto:your.email@example.com" class="text-green-600 hover:underline">info@trainwithmo.co.uk</a>
         </p>
       </form>
       <div class="mt-8">
