--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <title>Fit with Mo | Your Personal Training & Health Coach!</title>
   <link rel="icon" href="https://placehold.co/32x32/000000/FFFFFF?text=FM" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      /* Font family updated */
+      font-family: 'Poppins', sans-serif;
       background-color: #f8fafc;
       color: #333;
     }
@@ -33,7 +36,8 @@
       box-shadow: 0 7px 20px rgba(34, 197, 94, 0.3);
     }
     .section-header {
-      font-size: 2.5rem;
+      /* Font size reduced */
+      font-size: 2.25rem;
       font-weight: 700;
       color: #1e293b;
       margin-bottom: 2rem;
@@ -116,16 +120,16 @@
     }
   </style>
 </head>
-<body class="antialiased">
+<body class="antialiased text-gray-800">
   <header class="bg-white shadow-sm py-4">
     <div class="container flex justify-between items-center">
-      <a href="#" class="text-3xl font-bold text-green-600 rounded-lg p-2 hover:bg-gray-100 transition-colors">Fit with Mo!</a>
+      <a href="#" class="text-2xl font-bold text-green-600 rounded-lg p-2 hover:bg-gray-100 transition-colors">Fit with Mo!</a>
       <nav>
-        <ul class="flex space-x-6">
+        <ul class="flex space-x-6 text-sm">
           <li><a href="#about" class="text-gray-700 hover:text-green-600 font-medium transition-colors rounded-md px-3 py-2">About</a></li>
           <li><a href="#services" class="text-gray-700 hover:text-green-600 font-medium transition-colors rounded-md px-3 py-2">Services</a></li>
           <li><a href="#testimonials" class="text-gray-700 hover:text-green-600 font-medium transition-colors rounded-md px-3 py-2">Testimonials</a></li>
-          <li><a href="#contact" class="btn-primary">Book a Free Call</a></li>
+          <li><a href="#contact" class="btn-primary text-sm">Book a Free Call</a></li>
         </ul>
       </nav>
     </div>
@@ -134,13 +138,13 @@
   <section class="relative bg-gradient-to-r from-green-500 to-emerald-600 text-white text-center overflow-hidden">
     <div class="container py-20 md:py-32">
       <div class="hero-content">
-        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6 text-shadow-lg">
-          Transform Your Health & Fitness with Mo:<br class="hidden md:block"> Your Personal Coach for Lasting Results
+        <h1 class="text-4xl md:text-5xl font-extrabold leading-tight mb-6 text-shadow-lg">
+          Transform Your Health & Fitness
         </h1>
-        <p class="text-xl md:text-2xl mb-10 max-w-3xl mx-auto text-green-100">
+        <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto text-green-100">
           Unlock your full potential with customized fitness plans, expert nutrition guidance, and sustainable lifestyle strategies designed just for you.
         </p>
-        <a href="#contact" class="btn-primary text-xl px-8 py-4 inline-block">
+        <a href="#contact" class="btn-primary text-base px-8 py-4 inline-block">
           Start Your Transformation Today!
         </a>
       </div>
@@ -155,10 +159,10 @@
       </div>
       <div class="md:w-1/2 text-center md:text-left">
         <h2 class="section-header text-left">Meet Your Coach, Mo</h2>
-        <p class="text-lg leading-relaxed mb-6">
+        <p class="text-base leading-relaxed mb-6">
           Hi, I'm Mo! My passion is empowering individuals to achieve their health and fitness goals through a holistic and sustainable approach. With years of experience as a <strong class="text-green-600">Certified Personal Trainer</strong>, <strong class="text-green-600">Health Coach</strong>, and <strong class="text-green-600">Lifestyle Coach</strong>, I believe in creating personalized plans that fit your unique life, not the other way around.
         </p>
-        <p class="text-lg leading-relaxed">
+        <p class="text-base leading-relaxed">
           My philosophy centers on building strong foundations: consistent movement, balanced nutrition, and a positive mindset. I'm here to provide the expert guidance, unwavering support, and accountability you need to not just reach your goals, but to sustain them for a lifetime. Let's work together to make fitness an enjoyable and integral part of your life!
         </p>
       </div>
@@ -168,12 +172,12 @@
   <section id="services" class="py-16 md:py-24 bg-gray-50">
     <div class="container text-center">
       <h2 class="section-header">Your Path to a Healthier You</h2>
-      <p class="text-xl text-gray-600 mb-12 max-w-2xl mx-auto">
+      <p class="text-lg text-gray-600 mb-12 max-w-2xl mx-auto">
         I offer tailored coaching programs designed to meet you wherever you are on your wellness journey.
       </p>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm">
         <div class="card">
-          <h3 class="text-2xl font-semibold text-green-600 mb-4">Personal Training</h3>
+          <h3 class="text-xl font-semibold text-green-600 mb-4">Personal Training</h3>
           <p class="text-gray-700 mb-4">
             Customized workout plans, 1-on-1 or small group sessions (online/in-person), and expert guidance to build strength, endurance, and achieve your physique goals.
           </p>
@@ -185,7 +189,7 @@
           </ul>
         </div>
         <div class="card">
-          <h3 class="text-2xl font-semibold text-green-600 mb-4">Health Coaching</h3>
+          <h3 class="text-xl font-semibold text-green-600 mb-4">Health Coaching</h3>
           <p class="text-gray-700 mb-4">
             Unlock sustainable nutrition habits, improve energy levels, and manage stress with practical, evidence-based strategies.
           </p>
@@ -197,7 +201,7 @@
           </ul>
         </div>
         <div class="card">
-          <h3 class="text-2xl font-semibold text-green-600 mb-4">Lifestyle Coaching</h3>
+          <h3 class="text-xl font-semibold text-green-600 mb-4">Lifestyle Coaching</h3>
           <p class="text-gray-700 mb-4">
             Integrate fitness and health into your daily life, overcome obstacles, and build a positive, long-term relationship with your well-being.
           </p>
@@ -209,7 +213,7 @@
           </ul>
         </div>
       </div>
-      <a href="#contact" class="btn-primary mt-12 text-lg px-6 py-3 inline-block">
+      <a href="#contact" class="btn-primary mt-12 text-base px-6 py-3 inline-block">
         Learn More & Get Started
       </a>
     </div>
@@ -218,7 +222,7 @@
   <section id="testimonials" class="py-16 md:py-24 bg-white">
     <div class="container text-center">
       <h2 class="section-header">Real Transformations, Real Results</h2>
-      <p class="text-xl text-gray-600 mb-12 max-w-2xl mx-auto">
+      <p class="text-lg text-gray-600 mb-12 max-w-2xl mx-auto">
         See the success stories from clients who have transformed their lives with a balanced and sustainable approach to fitness.
       </p>
       
@@ -240,16 +244,16 @@
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-12">
           <div class="card">
-            <p class="testimonial-quote text-xl mb-4">
+            <p class="testimonial-quote text-lg mb-4">
               "Working with Mo was a game-changer! I've not only lost 15kg but also gained incredible confidence and energy. Her personalized approach made fitness enjoyable and sustainable. Highly recommend!"
             </p>
-            <p class="font-semibold text-gray-800">- Sarah L., Marketing Professional</p>
+            <p class="font-semibold text-gray-800 text-sm">- Sarah L., Marketing Professional</p>
           </div>
           <div class="card">
-            <p class="testimonial-quote text-xl mb-4">
+            <p class="testimonial-quote text-lg mb-4">
               "Mo helped me understand nutrition in a way no one else could. Her lifestyle coaching has transformed my daily habits, leading to better sleep and less stress. It's truly holistic coaching!"
             </p>
-            <p class="font-semibold text-gray-800">- David R., Small Business Owner</p>
+            <p class="font-semibold text-gray-800 text-sm">- David R., Small Business Owner</p>
           </div>
       </div>
     </div>
@@ -258,7 +262,7 @@
   <section id="contact" class="py-16 md:py-24 bg-gradient-to-r from-emerald-600 to-green-500 text-white rounded-t-3xl shadow-lg">
     <div class="container text-center max-w-2xl mx-auto">
       <h2 class="section-header text-white">Ready to Get Started?</h2>
-      <p class="text-xl mb-8">
+      <p class="text-lg mb-8">
         Let's connect for a free discovery call to discuss your goals and how I can help you achieve them.
       </p>
       <form class="bg-white p-8 rounded-2xl shadow-xl text-gray-800">
@@ -271,7 +275,7 @@
         <div class="mb-4">
           <textarea id="message" name="message" rows="4" placeholder="Tell me about your fitness goals..." class="form-input resize-y" required></textarea>
         </div>
-        <button type="submit" class="btn-primary w-full text-lg py-3">
+        <button type="submit" class="btn-primary w-full text-base py-3">
           Schedule Your Free Discovery Call
         </button>
         <p class="text-sm text-gray-600 mt-4">
@@ -279,11 +283,11 @@
         </p>
       </form>
       <div class="mt-8">
-        <h3 class="text-2xl font-semibold mb-4">Follow Mo on Social Media!</h3>
+        <h3 class="text-xl font-semibold mb-4">Follow Mo on Social Media!</h3>
         <div class="flex justify-center space-x-6">
           <a href="https://instagram.com/fitwithmo" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-200 transition-colors">
             <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-              <path fill-rule="evenodd" d="M12 0C8.74 0 8.333.01 7.035.07c-1.315.06-2.103.24-2.83.54a4.99 4.99 0 00-1.832 1.12c-.78.69-1.42 1.54-1.83 2.83-.3.72-.48 1.51-.54 2.83-.06 1.3-.07 1.7-.07 5.005s.01 3.705.07 5.005c.06 1.315.24 2.103.54 2.83a4.99 4.99 0 001.12 1.832c.69.78 1.54 1.42 2.83 1.83.72.3 1.51.48 2.83.54 1.3.06 1.7.07 5.005.07s3.705-.01 5.005-.07c1.315-.06 2.103-.24 2.83-.54a4.99 4.99 0 001.832-1.12c.78-.69 1.42-1.54 1.83-2.83.3-.72.48-1.51.54-2.83.06-1.3.07-1.7.07-5.005s-.01-3.705-.07-5.005c-.06-1.315-.24-2.103-.54-2.83a4.99 4.99 0 00-1.12-1.832c-.69-.78-1.54-1.42-2.83-1.83-.72-.3-1.51-.48-2.83-.54C15.705.01 15.3.001 12 0zm0 2.16c3.2 0 3.58.01 4.85.07 1.17.05 1.79.22 2.22.4a3.004 3.004 0 011.66 1.66c.18.43.35 1.05.4 2.22.06 1.27.07 1.65.07 4.85s-.01 3.58-.07 4.85c-.05 1.17-.22 1.79-.4 2.22a3.004 3.004 0 01-1.66 1.66c-.43.18-1.05.35-2.22.4-1.27.06-1.65.07-4.85.07s-3.58-.01-4.85-.07c-1.17-.05-1.79-.22-2.22-.4a3.004 3.004 0 01-1.66-1.66c-.18-.43-.35-1.05-.4-2.22-.06-1.27-.07-1.65-.07-4.85s.01-3.58.07-4.85c.05-1.17.22-1.79.4-2.22a3.004 3.004 0 011.66-1.66c.43-.18 1.05-.35 2.22-.4C8.42 2.17 8.8 2.16 12 2.16zm0 3.635a6.205 6.205 0 100 12.41 6.205 6.205 0 000-12.41zm0 2.16a4.045 4.045 0 110 8.09 4.045 4.045 0 010-8.09zm6.21-3.635a1.47 1.47 0 100 2.94 1.47 1.47 0 000-2.94z" clip-rule="evenodd"></path>
+              <path fill-rule="evenodd" d="M12 0C8.74 0 8.333.01 7.035.07c-1.315.06-2.103.24-2.83.54a4.99 4.99 0 00-1.832 1.12c-.78.69-1.42 1.54-1.83 2.83-.3.72-.48 1.51-.54 2.83-.06 1.3-.07 1.7-.07 5.005s.01 3.705.07 5.005c.06 1.315.24 2.103.54 2.83a4.99 4.99 0 001.12 1.832c.69.78 1.54 1.42 2.83 1.83.72.3 1.51.48 2.83.54 1.3.06 1.7.07 5.005.07s3.705-.01 5.005-.07c1.315-.06 2.103-.24 2.83-.54a4.99 4.99 0 001.832-1.12c.78-.69 1.42-1.54 1.83-2.83.3-.72.48-1.51-.54-2.83.06-1.3.07-1.7.07-5.005s-.01-3.705-.07-5.005c-.06-1.315-.24-2.103-.54-2.83a4.99 4.99 0 00-1.12-1.832c-.69-.78-1.54-1.42-2.83-1.83-.72-.3-1.51-.48-2.83-.54C15.705.01 15.3.001 12 0zm0 2.16c3.2 0 3.58.01 4.85.07 1.17.05 1.79.22 2.22.4a3.004 3.004 0 011.66 1.66c.18.43.35 1.05.4 2.22.06 1.27.07 1.65.07 4.85s-.01 3.58-.07 4.85c-.05 1.17-.22 1.79-.4 2.22a3.004 3.004 0 01-1.66 1.66c-.43.18-1.05.35-2.22.4-1.27.06-1.65.07-4.85.07s-3.58-.01-4.85-.07c-1.17-.05-1.79-.22-2.22-.4a3.004 3.004 0 01-1.66-1.66c-.18-.43-.35-1.05-.4-2.22-.06-1.27-.07-1.65-.07-4.85s.01-3.58.07-4.85c.05-1.17.22-1.79.4-2.22a3.004 3.004 0 011.66-1.66c.43-.18 1.05-.35 2.22-.4C8.42 2.17 8.8 2.16 12 2.16zm0 3.635a6.205 6.205 0 100 12.41 6.205 6.205 0 000-12.41zm0 2.16a4.045 4.045 0 110 8.09 4.045 4.045 0 010-8.09zm6.21-3.635a1.47 1.47 0 100 2.94 1.47 1.47 0 000-2.94z" clip-rule="evenodd"></path>
             </svg>
           </a>
         </div>
@@ -292,9 +296,9 @@
   </section>
 
   <footer class="bg-gray-800 text-white py-8 text-center rounded-t-lg">
-    <div class="container">
+    <div class="container text-sm">
       <p>© 2025 Fit with Mo. All rights reserved.</p>
-      <p class="text-sm mt-2">Designed for your success in personal training, health coaching, and lifestyle transformation.</p>
+      <p class="text-xs mt-2">Designed for your success in personal training, health coaching, and lifestyle transformation.</p>
     </div>
   </footer>
 </body>
